force-app/main/default/objects/DistribuicaoComissao__c/DistribuicaoComissao__c.object-meta.xml
<CustomObject>
    <label>Distribuição de Comissão</label>
    <nameField>
        <label>Nome de Distribuição de Comissão</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Distribuições de Comissões</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>