force-app/main/default/objects/DistribuicaoComissao__c/fields/ComissaoSeparada__c.field-meta.xml
<CustomField>
    <fullName>ComissaoSeparada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Comissão Separada?</label>
    <type>Checkbox</type>
</CustomField>