force-app/main/default/objects/DistribuicaoComissao__c/fields/Destinacao__c.field-meta.xml
<CustomField>
    <fullName>Destinacao__c</fullName>
    <label>Destinação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Comissão</fullName>
            </value>
            <value>
                <fullName>Prêmio</fullName>
            </value>
            <value>
                <fullName>Prêmio Extra</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>