force-app/main/default/objects/DistribuicaoComissao__c/fields/ValorComissaoMoeda__c.field-meta.xml
<CustomField>
    <fullName>ValorComissaoMoeda__c</fullName>
    <label>Valor da Comissão (R$)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>