force-app/main/default/objects/DistribuicaoComissao__c/fields/ValorComissaoPorcentagem__c.field-meta.xml
<CustomField>
    <fullName>ValorComissaoPorcentagem__c</fullName>
    <label>Valor da Comissão (%)</label>
    <precision>9</precision>
    <scale>6</scale>
    <type>Percent</type>
</CustomField>